[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/bg.png" type="Texture" id=2]
[ext_resource path="res://Girard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nick.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/bgm.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/FONT.tres" type="DynamicFont" id=6]

[sub_resource type="GDScript" id=1]

script/source = "extends Control\n\nfunc _ready():\n\tconnect(\"Restart\", self, \"hide\")"

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/scale = Vector2( 6, 6 )
texture = ExtResource( 2 )
centered = false

[node name="Girard" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 354, 390 )

[node name="Nick" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 558, 408 )

[node name="BGM" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 10.0
stream/buffering_ms = 500

[node name="UI" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 900.0
margin/bottom = 80.0

[node name="Timer" type="Control" parent="UI"]

visibility/opacity = 0.9
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 0.0
margin/right = 305.0
margin/bottom = 103.0

[node name="Label" type="Label" parent="UI/Timer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 138.0
margin/bottom = 58.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.470588 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "TIME"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Time" type="Label" parent="UI/Timer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 252.0
margin/bottom = 98.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.905882, 0.898039, 0.890196, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.313726 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "00:00:000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Control" parent="UI"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -90.0
margin/top = 20.0
margin/right = -438.0
margin/bottom = -87.0

[node name="Label" type="Label" parent="UI/Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 350.0
margin/bottom = 58.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.470588 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "FL DRANKED"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OJ" type="Label" parent="UI/Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 350.0
margin/bottom = 98.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.905882, 0.898039, 0.890196, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.313726 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "0.00"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Prompts" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 494.0
margin/right = 843.0
margin/bottom = 598.0

[node name="CaughtPrompt" type="Control" parent="Prompts"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Caught" type="Label" parent="Prompts/CaughtPrompt"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 18.0
margin/top = 0.0
margin/right = 743.0
margin/bottom = 58.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "You have been caught!"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Restart" type="Label" parent="Prompts/CaughtPrompt"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 39.0
margin/right = 756.0
margin/bottom = 97.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
text = "Press Enter to Restart"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StartPrompt" type="Control" parent="Prompts"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.5
margin/top = 34.0
margin/right = 280.5
margin/bottom = -6.0
script/script = SubResource( 1 )

[node name="Prompt" type="Label" parent="Prompts/StartPrompt"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 20.0
margin/right = -596.0
margin/bottom = -38.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Tap space to chug OJ"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="GameOver" from="." to="Nick" method="_on_game_over"]

[connection signal="GameOver" from="." to="Girard" method="_on_game_over"]

[connection signal="GameOver" from="." to="Prompts/CaughtPrompt" method="show"]

[connection signal="Restart" from="." to="Nick" method="_on_restart"]

[connection signal="Restart" from="." to="Girard" method="_on_restart"]

[connection signal="Restart" from="." to="Prompts/CaughtPrompt" method="hide"]

[connection signal="StartGame" from="." to="Prompts/StartPrompt" method="hide"]

[connection signal="StartGame" from="." to="Nick" method="_on_restart"]

[connection signal="StartGame" from="." to="UI" method="show"]

[connection signal="StartGame" from="." to="Girard" method="_on_restart"]

[connection signal="aware" from="Girard" to="." method="_gameover"]

[connection signal="Drinking" from="Nick" to="Girard" method="_on_drink"]

[connection signal="Drinking" from="Nick" to="." method="_on_drink"]

[connection signal="start_drinking" from="Nick" to="." method="_on_start_drinking"]

[connection signal="stop_drinking" from="Nick" to="." method="_on_stop_drinking"]


